[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Location 1/+4 predators.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Light Checker.gd" type="Script" id=2]
[ext_resource path="res://Assets/Location 1/Predator Filter.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 713, 1379.39 )

[node name="Light Checker" type="Area2D"]
script = ExtResource( 2 )

[node name="Predators" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -30, 224 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 877, 375 )
scale = Vector2( 1.89688, 2.87593 )
texture = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Light_Checker_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Light_Checker_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
